# proto-lua

./: .gitignore
pbc/: pbc.vcxproj
protobuf-2.4.1/protobuf-2.4.1/gtest/msvc/: gtest.vcxproj  gtest_main.vcxproj
protobuf-2.4.1/protobuf-2.4.1/vsprojects/: UpgradeLog.XML  libprotobuf-lite.vcxproj  libprotobuf.vcxproj  libprotoc.vcxproj  lite-test.vcxproj  protoc.vcxproj  test_plugin.vcxproj  test_plugin.vcxproj.filters  tests.vcxproj
protoc-gen-lua/protoc-gen-lua/example/: test.lua
protoc-gen-lua/protoc-gen-lua/example/cpp/: person.pb.cc  person.pb.h
protoc-gen-lua/protoc-gen-lua/example/lua/: person_pb.lua
protoc-gen-lua/protoc-gen-lua/example/pbc/: pbctest.lua  person.pb  testparser.lua
protoc-gen-lua/protoc-gen-lua/example/proto/: Buildcpp.bat  Buildlpbc.bat  Buildlua.bat  person.proto
protoc-gen-lua/protoc-gen-lua/example/sproto/: person.sproto  sproto.lua  sprototest.lua
protoc-gen-lua/protoc-gen-lua/pbc/: CMakeLists.txt  pbc-lua.c
protoc-gen-lua/protoc-gen-lua/plugin/: protoc-gen-lua  protoc-gen-lua.bat
protoc-gen-lua/protoc-gen-lua/protobuf/: protobuf.lua
protoc-gen-lua/protoc-gen-lua/sproto/: CMakeLists.txt  cmakebuild.bat  lsproto.c
protoc-gen-lua/protoc-gen-lua/test/: CMakeLists.txt  cmakebuild.txt  pb.c
protoc-gen-lua/protoc-gen-lua/testpbc/: CMakeLists.txt  pbc-lua.c
testlua/: testlua.sln
testlua/testlua/: LuaManager.cpp  LuaManager.h  ReadMe.txt  lsproto.c  lsproto.h  person.pb.h  person.sproto  sproto.c  sproto.h  stdafx.cpp  stdafx.h  testlua.cpp  testlua.vcxproj  testlua.vcxproj.filters
(+1 files in other folders)
